--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <form id="form" method="get"> 
+    <form id="form" method="get" action="url"> 
         <input type="text" id="title" placeholder="Title"></input>
         <input type="text" id="author" placeholder="your name"></input>
         <textarea type="text" id="post" rows="4" cols="50" placeholder="your story..."></textarea>
