more little updates

--- a/client/index.html
+++ b/client/index.html
@@ -11,7 +11,7 @@
     <form id="form" method="get" action="url"> 
         <input type="text" id="title" placeholder="Title"></input>
         <input type="text" id="author" placeholder="your name"></input>
-        <textarea type="text" id="post" rows="4" cols="50" placeholder="your story..."></textarea>
+        <textarea type="text" id="article" rows="4" cols="50" placeholder="your story..."></textarea>
         <input id="submitbtn"type="submit" value="Submit"></input>
     </form>
     
