modified form api call  and server port

--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <form id="form" method="get" action=""> 
+    <form id="form" method="POST" action="localhost:3000/"> 
         <input type="text" id="title" placeholder="Title"></input>
         <input type="text" id="author" placeholder="your name"></input>
         <textarea type="text" id="article" rows="4" cols="50" placeholder="your story..."></textarea>
