--- a/client/index.html
+++ b/client/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css" integrity="sha512-oHDEc8Xed4hiW6CxD7qjbnI+B07vDdX7hEPTvn9pSZO1bcRqHp8mj9pyr+8RVC2GmtEfI2Bi9Ke9Ass0as+zpg==" crossorigin="anonymous" />
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <script defer src="app.js"></script>
+    <title>TeleClone</title>
 </head>
 <body>
-    <form id="form" method="POST" action="localhost:3000/"> 
+    <form id="form" method="POST" action=""> 
         <input type="text" id="title" placeholder="Title"></input>
         <input type="text" id="author" placeholder="your name"></input>
         <textarea type="text" id="article" rows="4" cols="50" placeholder="your story..."></textarea>
