create post method in client bug not receiving res from server

--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,7 @@
     <title>TeleClone</title>
 </head>
 <body>
-    <form id="form" method="POST" action=""> 
+    <form id="form" action=""> 
         <input type="text" id="title" placeholder="Title"></input>
         <input type="text" id="author" placeholder="your name"></input>
         <textarea type="text" id="article" rows="4" cols="50" placeholder="your story..."></textarea>
